# SPDX-FileCopyrightText: 2026 Knitli Inc. <knitli@knitli.com>
# SPDX-License-Identifier: LicenseRef-MarqueLicense-1.0

[package]
name = "promote-callsite-lint"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
license = "LicenseRef-MarqueLicense-1.0"
description = "AST-based CI lint enforcing FR-040 promote-callsite + D12 signature-shape discipline for marque (engine-refactor-006)."

[lib]
path = "src/lib.rs"

[[bin]]
name = "promote-callsite-lint"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = "thin"

[workspace]
# Out-of-workspace per Constitution III — this crate must not contaminate
# the WASM-safe closure of /home/user/marque/Cargo.toml's workspace.
# `syn`/`walkdir`/`clap`/`regex` would not break WASM, but the parallel
# `tools/masking-pin-lint/` crate established the out-of-workspace pattern
# for CI lint binaries; mirroring it keeps the policy uniform and stops
# cargo's parent-walk during manifest resolution. Verify with
# `grep promote-callsite-lint /home/user/marque/Cargo.toml` returning no
# [workspace.members] entry.
