# SPDX-FileCopyrightText: 2026 Knitli Inc. <knitli@knitli.com>
# SPDX-License-Identifier: LicenseRef-MarqueLicense-1.0

[package]
name = "promote-callsite-lint"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "AST-based CI lint enforcing the engine-only promote-callsite discipline plus signature-shape discipline for marque."
license = "LicenseRef-MarqueLicense-1.0"
publish = false

[workspace]
# Out-of-workspace per Constitution III — this crate must not contaminate
# the WASM-safe closure of /home/user/marque/Cargo.toml's workspace.
# `syn`/`walkdir`/`clap` would not break WASM, but the parallel
# `tools/masking-pin-lint/` crate established the out-of-workspace pattern
# for CI lint binaries; mirroring it keeps the policy uniform and stops
# cargo's parent-walk during manifest resolution. Verify with
# `grep promote-callsite-lint /home/user/marque/Cargo.toml` returning no
# [workspace.members] entry.

[lib]
path = "src/lib.rs"

[[bin]]
name = "promote-callsite-lint"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
serde = { version = "1.0.228", features = ["derive"] }
syn = { version = "2.0.117", features = ["extra-traits", "full", "visit"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27"

[profile.release]
lto = "thin"
