# SPDX-FileCopyrightText: 2026 Knitli Inc.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "marque-engine-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

# Prevent this from being part of the main workspace
[workspace]

[[bin]]
doc = false
name = "lint"
path = "fuzz_targets/lint.rs"
test = false

[dependencies]
libfuzzer-sys = "0.4"
marque-config = { path = "../../marque-config" }
marque-engine = { path = "..", features = ["batch"] }
